protected/tests/spec/navigation_spec.rb -- Tests to see if the navigation when logged out is as expected
protected/tests/spec/spec_helper.rb -- Moved login finctions from test_spec here, also addded a function to reset the database to the defaults.
protected/tests/spec/user_spec.rb -- Checks to see if users can log in, and what the navigation looks like when logged in. Currently fails. The test expects the login form to use the database which isn't yet implemented.

protected/views/user/_form.php -- Added the second password field to the form, also removed the max password length

protected/tests/bootstrap.php -- Moved generic functions from user_model to here
protected/tests/unit/user_model.php -- see above
protected/tests/unit/user_identity_component.php -- Created a test to verify the form checked the database for user names and passwords rather then static fields

protected/components/UserIdentity.php -- This is the component responsible for sessions. I linked it with the user model for authentication.

protected/migrate_bottom.sh -- Simple script to aid in migration testing. This will revert to the first migration (assuming there is less then 100 migrations)
protected/migrations/m130129_000236_increase_user_password_length.php -- This migration and the ones below have been crashing and were written poorly. They did not run correctly on the test database. I fixed this
protected/migrations/m130129_220200_create_user_indices.php
protected/migrations/m130129_220748_add_default_admin_user.php

protected/migrations/m130130_222233_rename_user_password_column.php -- Renamed password field in user to password_hash. This will remove some confusion
protected/models/User.php -- Update user for column change
protected/tests/spec/spec_helper.rb -- Updated rspecs for column change
protected/views/user/_view.php -- Removed password hash from showing in the view
protected/views/user/view.php -- Same as above
