@@ -31,7 +31,7 @@ class UserModelTest extends CTestCase
 		//This makes sure the User Model will not allow new users to be created unless their passwords match
 		$details = generate_random_user_details();
 		$details['password_repeat'] = $details['password'] . '123';
-		$user = add_user_to_database($details);
+		add_user_to_database($details);
 		$found_user = User::model()->findAllByAttributes(array('username'=> $details['username']));
 		$this->assertTrue(count($found_user) == 0);
 	}
@@ -48,7 +48,7 @@ class UserModelTest extends CTestCase
 	{
 		//This checks to see if the model is keeping the users password as clear text in the database
 		$details = generate_random_user_details();
-		$user = add_user_to_database($details);
+		add_user_to_database($details);
 		$found_user = User::model()->findAllByAttributes(array('username'=> $details['username']));
 		$this->assertTrue(count($found_user) != 0);
 		$this->assertTrue($found_user[0]['password'] != $details['password']);
@@ -71,18 +71,34 @@ class UserModelTest extends CTestCase
 		$details = generate_random_user_details();
 		add_user_to_database($details);
 
-		$found_user = User::model()->findAllByAttributes(array('username'=> $details['username']));
-		$this->assertTrue(count($found_user) == 1);
-
-		$user = $found_user[0];
-		$result = $user->authenticate($details['password'] . '123');
+		$result = try_user_login($details['username'], $details['password'] . '123');
 		$this->assertTrue($result == false);
-		$this->assertTrue($user['is_authenticated'] == false);
 
-		$result = $user->authenticate($details['password']);
+		$result = try_user_login($details['username'], $details['password']);
 		$this->assertTrue($result == true);
-		$this->assertTrue($user['is_authenticated'] == true);
+	}
+
+	public function testUserPasswordCannotBeBlank()
+	{
+		$details = generate_random_user_details();
+		$details['password'] = '';
+		$details['password_repeat'] = '';
+		$this->assertFalse(add_user_to_database($details,false));
+	}
+	public function testUpdateUserWithoutChangingPassword()
+	{
+		//create a new user
+		$details = generate_random_user_details();
+		add_user_to_database($details);
+
+		//find user and update role
+		$found_user = User::model()->findAllByAttributes(array('username'=> $details['username']));
+		$user = $found_user[0];
+		$user->role = 'user';
+		$user->save();
+
+		//Lookup user again
+		$this->assertTrue(try_user_login($details['username'], $details['password']));
 	}
 }
 ?>
-
